  http://www.fragment.com/~jl8e/angband/

** [B] stands for Bugfix.
** [C] stands for Client changes.
** [H] stands for Hack :)

==== below this line are the unfixed bugs known ====
[B] Self-reproducing black trap
[B] Panic save often enters into infinite loop.
[B] House doors still seem to crash sometimes.
[B] wpos display hides wound states(eg.'Deep Gash')

==== below this line are changes to be done in the future ====
[minor ones]
- recall-depth array for each dungeons/towers
- full colour-support in show_file
- quiver/tool slot (not a monster! ;)
- sort unique-list according to the level
- tombstone screen
- wilderness compacting
- low-sanity alart each 2000 turn or sth(and hallucination? :)
- cave_special should use union? and their save/load via csfunc
- display "non-scoring mode" in '@' screen
- store buying-price should reflect *ID* states
[C] ameliorate option interface(toggle-key/vi-key)
[C] use 2 lines for each server on server-list

[major ones]
- new terrains and their effects (f_info.txt)
- variety of dungeon types (d_info.txt)
- better cave-generator (generate.c) {Asclep?}
- fully-implemented multiple towns (t_*.txt)
- more kinds of stores (st_info.txt)
- quests (needing LUA-hooks) {hopefully DarkGod}
- guild, or new party system
- backbone scenario (like token system)
- total rebalancing for all of them
- client updates necessary
- item stacks/monster inventory
- better vaults
- fix gfx again {Asclep}
- interactive spell system (like in C3)
- total source-code cleanup {takkaria?}
- new classes/races

==== below this line are RFEs collected so far (good or bad) ====
- more equipment slots in general (like Bracer)
- door spiking (with '/' key)
- NPC/pet/golem {Evileye/DG?}
- monsters' interactions
- player shouldn't gain more than 1 levels at once (esp.from books)
- enhanced help system (imo we cannot beat web browsers anyway..)
- subclass system
- karma/luck system (karma is like luck, but never gets positive value)